# Tortoisebotpromax-humble-fortress

./: README.md  frames_2026-03-06_15.43.25.gv
src/: README.md  requirements.txt
src/joy_with_waypoint_nav/auto_joy_teleop/src/: auto_joy_teleop.cpp
src/tortoisebotpromax_bringup/launch/: bringup.launch.py
src/tortoisebotpromax_description/launch/: display.launch.py  state_publisher.launch.py
src/tortoisebotpromax_description/rviz/: display.rviz  navigation.rviz  sensors.rviz  simulation.rviz
src/tortoisebotpromax_description/urdf/: tortoisebotpromax.gazebo  tortoisebotpromax_sim.xacro
src/tortoisebotpromax_firmware/config/: X4_Pro_params.yaml
src/tortoisebotpromax_gazebo/: CMakeLists.txt  package.xml
src/tortoisebotpromax_gazebo/launch/: ignition_sim.launch.py
src/tortoisebotpromax_gazebo/worlds/: small_house.world
src/tortoisebotpromax_navigation/config/: nav2_params.yaml
src/tortoisebotpromax_slam/config/: ekf.yaml  lidar.lua  slam_toolbox_params.yaml
src/tortoisebotpromax_slam/launch/: cartographer.launch.py  slam_toolbox.launch.py
